<resources>
    <string name="app_name">Doing</string>
    <string name="home_tab_text">NOW</string>
    <string name="history_tab_text">HISTORY</string>
    <string name="friends_tab_text">FRIENDS</string>
    <string name="friends_tab_text_excl">FRIENDS!</string>
    <string name="home_no_doings_text">Nobody is doing anything</string>
    <string name="history_no_doings_text">There aren\'t any activities registered</string>
    <string name="friends_no_registered">You have not added any friends yet</string>
    <string name="enjoying">Enjoying</string>
    <string name="listening">Listening</string>
    <string name="playing">Playing</string>
    <string name="reading">Reading</string>
    <string name="watching">Watching</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="is">is</string>
    <string name="was">was</string>
    <string name="I">I</string>
    <string name="me">Me</string>
    <string name="am">am</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="months">months</string>
    <string name="years">years</string>
    <string name="second">second</string>
    <string name="minute">minute</string>
    <string name="hour">hour</string>
    <string name="day">day</string>
    <string name="month">month</string>
    <string name="year">year</string>
    <string name="prevAgo"></string>
    <string name="postAgo">\u0020ago</string>
    <string name="less_than">Less than\u0020</string>
    <string name="time">time</string>
    <string name="this_game">this game</string>
    <string name="this_artist_or_group">this artist or group</string>
    <string name="this_book">this book</string>
    <string name="this_movie_show">this movie or show</string>
    <string name="doing_this">doing this</string>
    <string name="error_message_empty_field">Please, fill out this field</string>
    <string name="error_message_empty_action">Please, fill out this field</string>
    <string name="error_message_friend_code_size">Friend code must have 6 characters</string>
    <string name="error_message_friend_code_exists">Friend code already added</string>
    <string name="error_message_friend_code_dont_exists">This friend code doesn\'t exist</string>
    <string name="error_message_friend_code_yourself">You can\'t add yourself as a friend</string>
    <string name="error_message_friend_exists">Friend already added</string>
    <string name="error_message_friend_dont_exists">This friend doesn\'t exist</string>
    <string name="x">x</string>
    <string name="zero">0</string>
    <string name="there_are_not">There are no</string>
    <string name="be_the_first">Be the first to</string>
    <string name="i_x">I</string>
    <string name="x_this">this</string>
    <string name="show_history">Show history</string>
    <string name="unknown_user_name">Unknown</string>
    <string name="three_periods">...</string>
    <string name="more">more</string>
    <string name="my_friend_code">My friend code</string>
    <string name="friend_code">Friend Code</string>
    <string name="wait_for_another_doing">Please, wait a little longer to add a new activity</string>
    <string name="no_net_message">Unable to connect to server. Please, check your internet connection</string>
    <string name="no_server_message">There have been an error connecting to the server</string>
    <string name="new_commentary_hint">blah blah blah</string>
    <string name="there_are">There are</string>
    <string name="my_name_tag">My name</string>
    <string name="insert_my_name">My name</string>
    <string name="my_name_hint">My name (e.g Jon Snow)</string>
    <string name="insert_my_name_error">What\'s your name?</string>
    <string name="insert_my_name_error_short">Too short!</string>
    <string name="insert_my_name_error_last_name">Please, enter first and last name</string>
    <string name="insert_friend_name">My friend\'s name</string>
    <string name="i_know_as">I know him/her as</string>
    <string name="insert_friend_code">My friend\'s code</string>
    <string name="friend_name_hint">Friend name</string>
    <string name="friend_code_hint">Friend code</string>
    <string name="my_user_title">My user</string>
    <string name="external_storage_permission_denied">Permission to access external storage denied</string>
    <string name="what_is_this">What is this?</string>
    <string name="no_friend_code">Unable to set a friend code</string>
    <string name="invitation_title">Invite your friends</string>
    <string name="invitation_message">Hi! Do you want to share with me what you are reading, watching or playing?</string>
    <string name="invitation_message_subject">Hi! Do you want to share with me what you are reading, watching or playing?</string>
    <string name="invitation_message_content_1">Hi! Do you want to share with me what you are reading, watching or playing?</string>
    <string name="invitation_message_content_2"></string>
    <string name="invitation_message_content_3">My user is:</string>
    <string name="invitation_message_content_4">"¡Don\'t forget adding me as a friend!"</string>
    <string name="code_asking_message">Hi! Do you have Doing App installed in your phone? What is your friend code?</string>
    <string name="code_asking_message_subject">Hi! Do you have Doing App installed in your phone? What is your friend code?</string>
    <string name="code_asking_message_content_1">Hi! Do you have Doing App installed in your phone? With this app you can share what you are reading, watching or playing.</string>
    <string name="code_asking_message_content_2">I would like to add you as a friend!. What is your friend code?</string>
    <string name="code_asking_message_content_3">Mine is</string>
    <string name="code_asking_message_content_4">.</string>
    <string name="code_asking_message_content_5"></string>
    <string name="code_asking_message_content_6"></string>
    <string name="friendship_active_text_ini">You and\u0020</string>
    <string name="friendship_active_text_end">are friends</string>
    <string name="friendship_invited_text_ini">You have added</string>
    <string name="friendship_invited_text_end">as a friend. Waiting for a reply</string>
    <string name="friendship_inviting_me_text">have added you as a friend</string>
    <string name="friendship_ignored_text_ini">You and\u0020</string>
    <string name="friendship_ignored_text_end">aren\'t friends</string>
    <string name="friendship_inactive_text_ini">You and\u0020</string>
    <string name="friendship_inactive_text_end">are friends [Disabled]</string>
    <string name="confirm">Confirm</string>
    <string name="ignore">Ignore</string>
    <string name="reconsider">Reconsider</string>
    <string name="help_friend_code_text_1">Your friend code is your unique identifier. Each user of Doing has his own friend code.</string>
    <string name="help_friend_code_text_2">Think of it as your identity document or phone number but only for this app.</string>
    <string name="help_friend_code_text_3">This code is needed to add someone as a friend, so... don\'t forget to share it! </string>
    <string name="invite_your_friend_button_text">Send an friendship message to a friend</string>
    <string name="ask_your_friend_button_text">Your friend doesn\'t have Doing. Send him an invitation!</string>
    <string name="no_app_available_for_action">No app available for this action!</string>
    <string name="no_app_available_send_message">No app available to send a message!</string>
    <string name="no_app_available_read_tex">No app available to read a text!</string>
    <string name="deactivate_notifications">Deactivate notifications</string>
    <string name="activate_notifications">Activate notifications</string>
    <string name="notification_doing_title">Some friends are doing something</string>
    <string name="notification_doing_text_ini">You have</string>
    <string name="notification_doing_text_end">new activities</string>
    <string name="notification_doing_text_end_one">new activity</string>
    <string name="notification_like_title">Some friends are liking something</string>
    <string name="notification_like_text_ini">You have</string>
    <string name="notification_like_text_end">new likes</string>
    <string name="notification_like_text_end_one">new like</string>
    <string name="notification_commentary_title">Some friends are commenting on something</string>
    <string name="notification_commentary_text_ini">You have</string>
    <string name="notification_commentary_text_end">new commentaries</string>
    <string name="notification_commentary_text_end_one">new commentary</string>
    <string name="add_doing_send_to">Send to:</string>
    <string name="add_doing_all_my_friends">All my friends</string>
    <string name="add_doing_only_for_me">Only me</string>
    <string name="add_doing_some_of_my_friends">Some of my friends</string>
    <string name="select_friend_title">Send to</string>
    <string name="info">Info</string>
    <string name="doing_info_sent_by">Sent By</string>
    <string name="doing_info_sent_to">Sent To</string>
    <string name="register_name">Registered as:</string>
    <string name="known_as_name">Name:</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="remove_ads_perma">Remove Ads permanently</string>
    <string name="all">todos</string>
    <string name="none">ninguno</string>
    <string name="add_friend">Add friend</string>
    <string name="all_filter_text">All</string>
    <string name="unassigned">Unassigned</string>
    <string name="friendcode_unassigned">Unassigned</string>
    <string name="friendship_status">Status</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="enabled_status_text">You can send and receive activities from this user</string>
    <string name="disabled_status_text">You can\'t send nor receive activities from this user</string>
    <string name="friend_code_copied_to_clipboard">Your friend code has been copied to clipboard</string>
    <string name="recovery_code_copied_to_clipboard">Your recovery code has been copied to clipboard</string>
    <string name="new_data_notif_title">Something is happening in Doing</string>
    <string name="invitation_request_notif_title">You have new friend requests in Doing</string>
    <string name="invitation_request_notif_text">Confirm/Ignore them in your friends tab</string>
    <string name="invitation_request_message">You have new friend requests in your friends tab</string>
    <string name="send_message_friend_chooser">Send a message to your friend</string>
    <string name="about">About</string>
    <string name="binary_lemons_copyright">© Binary Lemons</string>
    <string name="all_rights_reserved">All rights reserved.</string>
    <string name="LICENSES">LICENSES</string>
    <string name="rate_app">Rate this app</string>
    <string name="error_purchasing">Error purchasing:</string>
    <string name="error_purchasing_auth">Error purchasing: Authenticity verification failed</string>
    <string name="item_remove_ads_already_purchased">Item already purchased. Removing Ads</string>
    <string name="store_error">There was an error accessing the store</string>
    <string name="recovery_code_title">Account recovery code</string>
    <string name="recovery_code_send_text">Send yourself your recovery code by email</string>
    <string name="recovery_code_subject">Doing - Account recovery code</string>
    <string name="recovery_code_mail_user_title">Account:</string>
    <string name="recovery_code_mail_code_title">Recovery Code:</string>
    <string name="change_profile_picture">Change my profile picture</string>
</resources>