<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center_horizontal"
              android:orientation="vertical">

    <ImageButton
        android:id="@+id/info_about_app_back_button"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|top"
        android:src="@drawable/ic_back_arrow_black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textSize="@dimen/text_size_large"/>

            <ImageView
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_doing_round_nodpi"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:text="@string/binary_lemons_copyright"
                android:textSize="@dimen/text_size_medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:text="@string/all_rights_reserved"
                android:textSize="@dimen/text_size_small"/>

            <TextView
                android:id="@+id/info_about_app_licenses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="48dp"
                android:gravity="center_horizontal"
                android:text="@string/LICENSES"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_small"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>