<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="16dp"
              android:layout_marginLeft="16dp"
              android:layout_marginTop="16dp"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/edit_friend_registered_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:textColor="@color/inactiveDarkColor"
                android:textStyle="bold"
                tools:text="Nombre registrado"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/i_know_as"
                android:textColor="@color/black"
                android:textStyle="bold"/>

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_friend_text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:ems="@string/user_name_max_length"
                android:hint="@string/friend_name_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="@string/user_name_max_length"
                android:maxLines="1"
                android:textSize="16sp"/>

            <LinearLayout
                android:id="@+id/edit_friend_status_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/edit_friend_status_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/friendship_status"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <Switch
                    android:id="@+id/edit_friend_status_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    tools:text="@string/enabled"/>

                <TextView
                    android:id="@+id/edit_friend_status_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:gravity="center_horizontal"
                    tools:text="@string/enabled_status_text"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>