<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/user_detail_back_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:src="@drawable/ic_back_arrow_black"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/user_detail_avatar_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">

                    <include layout="@layout/user_avatar"/>

                </FrameLayout>

                <TextView
                    android:id="@+id/user_detail_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="8dp"
                    android:textIsSelectable="true"
                    tools:text="@string/me"/>

                <TextView
                    android:id="@+id/change_my_profile_picture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text="@string/change_profile_picture"
                    android:textColor="@color/colorAccent"
                    android:visibility="gone"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/register_name"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/user_detail_registered_as"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textIsSelectable="true"
                    tools:text="Aegon Targaryen"/>

                <TextView
                    android:id="@+id/user_details_alias_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:text="@string/i_know_as"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/user_detail_alias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textIsSelectable="true"
                    tools:text="Jon Snow"/>

                <LinearLayout
                    android:id="@+id/recovery_code_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/recovery_code_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:text="@string/recovery_code_title"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/recovery_code_send_yourself"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:text="@string/recovery_code_send_text"
                        android:textColor="@color/colorAccent"/>

                    <TextView
                        android:id="@+id/recovery_code_friend_code_help"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/what_is_this"
                        android:textSize="12sp"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/user_detail_history_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_history_black"
                android:drawableTint="@color/colorHistoryButton"
                android:text="@string/show_history"
                android:visibility="gone"/>

            <LinearLayout
                android:id="@+id/friends_item_friendship_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/friends_item_friendship_icon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_friendship_ok"/>

                <TextView
                    android:id="@+id/friends_item_friendship_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    tools:text="This User Name and you are friends"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
